Add comment header to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+    +-------------+
+    | ScreenColor |
+    +-------------+
+    https://andreaslonn.se/ScreenColor
+
+    Hello
+-->
 <html lang="en">
 <head>
     <meta charset="utf-8">
